reference/5.1/Microsoft.PowerShell.Management/Rename-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,командлет
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/rename-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Rename-ItemProperty
ms.openlocfilehash: 5cbd228f78da3bf7fa70a001391bc98f63085a73
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 07/07/2020
ms.locfileid: "93227930"
---
# <span data-ttu-id="1c656-103">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-103">Rename-ItemProperty</span></span>

## <span data-ttu-id="1c656-104">Краткий обзор</span><span class="sxs-lookup"><span data-stu-id="1c656-104">SYNOPSIS</span></span>
<span data-ttu-id="1c656-105">Переименовывает свойство элемента.</span><span class="sxs-lookup"><span data-stu-id="1c656-105">Renames a property of an item.</span></span>

## <span data-ttu-id="1c656-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="1c656-106">SYNTAX</span></span>

### <span data-ttu-id="1c656-107">Путь (по умолчанию)</span><span class="sxs-lookup"><span data-stu-id="1c656-107">Path (Default)</span></span>

```
Rename-ItemProperty [-Path] <String> [-Name] <String> [-NewName] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="1c656-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="1c656-108">LiteralPath</span></span>

```
Rename-ItemProperty -LiteralPath <String> [-Name] <String> [-NewName] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="1c656-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="1c656-109">DESCRIPTION</span></span>

<span data-ttu-id="1c656-110">`Rename-ItemProperty`Командлет изменяет имя указанного свойства элемента.</span><span class="sxs-lookup"><span data-stu-id="1c656-110">The `Rename-ItemProperty` cmdlet changes the name of a specified item property.</span></span>
<span data-ttu-id="1c656-111">Значение свойства не меняется.</span><span class="sxs-lookup"><span data-stu-id="1c656-111">The value of the property is not changed.</span></span>
<span data-ttu-id="1c656-112">Например, можно использовать `Rename-ItemProperty` для изменения имени записи реестра.</span><span class="sxs-lookup"><span data-stu-id="1c656-112">For example, you can use `Rename-ItemProperty` to change the name of a registry entry.</span></span>

## <span data-ttu-id="1c656-113">Примеры</span><span class="sxs-lookup"><span data-stu-id="1c656-113">EXAMPLES</span></span>

### <span data-ttu-id="1c656-114">Пример 1. Переименование записи реестра</span><span class="sxs-lookup"><span data-stu-id="1c656-114">Example 1: Rename a registry entry</span></span>

<span data-ttu-id="1c656-115">Эта команда переименовывает запись реестра конфигурации, которая содержится в разделе "HKEY_LOCAL_MACHINE\Software\SmpApplication", в "олдконфиг".</span><span class="sxs-lookup"><span data-stu-id="1c656-115">This command renames the config registry entry that is contained in the "HKEY_LOCAL_MACHINE\Software\SmpApplication" key to "oldconfig".</span></span>

```powershell
Rename-ItemProperty -Path HKLM:\Software\SmpApplication -Name config -NewName oldconfig
```

## <span data-ttu-id="1c656-116">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="1c656-116">PARAMETERS</span></span>

### <span data-ttu-id="1c656-117">-Credential</span><span class="sxs-lookup"><span data-stu-id="1c656-117">-Credential</span></span>

<span data-ttu-id="1c656-118">Указывает учетную запись пользователя с разрешением на выполнение этого действия.</span><span class="sxs-lookup"><span data-stu-id="1c656-118">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="1c656-119">По умолчанию используется текущий пользователь.</span><span class="sxs-lookup"><span data-stu-id="1c656-119">The default is the current user.</span></span>

<span data-ttu-id="1c656-120">Введите имя пользователя, например "User01" или "Domain01\User01", или введите объект **PSCredential** , например, созданный `Get-Credential` командлетом.</span><span class="sxs-lookup"><span data-stu-id="1c656-120">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="1c656-121">Если ввести имя пользователя, будет предложено ввести пароль.</span><span class="sxs-lookup"><span data-stu-id="1c656-121">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="1c656-122">Этот параметр не поддерживается поставщиками, которые устанавливаются вместе с Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="1c656-122">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-123">-Exclude</span><span class="sxs-lookup"><span data-stu-id="1c656-123">-Exclude</span></span>

<span data-ttu-id="1c656-124">Указывает элементы, которые пропускает этот командлет.</span><span class="sxs-lookup"><span data-stu-id="1c656-124">Specifies items that this cmdlet omits.</span></span>
<span data-ttu-id="1c656-125">Значение этого параметра определяет параметр **Path** .</span><span class="sxs-lookup"><span data-stu-id="1c656-125">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="1c656-126">Введите путь к элементу или шаблон, например. «\*.txt».</span><span class="sxs-lookup"><span data-stu-id="1c656-126">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="1c656-127">Можно использовать подстановочные знаки.</span><span class="sxs-lookup"><span data-stu-id="1c656-127">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="1c656-128">-Filter</span><span class="sxs-lookup"><span data-stu-id="1c656-128">-Filter</span></span>

<span data-ttu-id="1c656-129">Задает фильтр в формате или на языке поставщика.</span><span class="sxs-lookup"><span data-stu-id="1c656-129">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="1c656-130">Значение этого параметра определяет параметр **Path** .</span><span class="sxs-lookup"><span data-stu-id="1c656-130">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="1c656-131">Синтаксис фильтра, включая использование подстановочных знаков, зависит от поставщика.</span><span class="sxs-lookup"><span data-stu-id="1c656-131">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="1c656-132">Фильтры более эффективны, чем другие параметры, так как поставщик применяет их, когда командлет получает объекты, а не использует фильтры PowerShell для объектов после их извлечения.</span><span class="sxs-lookup"><span data-stu-id="1c656-132">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="1c656-133">-Force</span><span class="sxs-lookup"><span data-stu-id="1c656-133">-Force</span></span>

<span data-ttu-id="1c656-134">Заставляет командлет переименовать свойство объекта, доступ к которому в противном случае невозможен для пользователя.</span><span class="sxs-lookup"><span data-stu-id="1c656-134">Forces the cmdlet to rename a property of an object that cannot otherwise be accessed by the user.</span></span>
<span data-ttu-id="1c656-135">Применение этого параметра зависит от конкретного поставщика.</span><span class="sxs-lookup"><span data-stu-id="1c656-135">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="1c656-136">Дополнительные сведения см. в разделе [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="1c656-136">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-137">-Include</span><span class="sxs-lookup"><span data-stu-id="1c656-137">-Include</span></span>

<span data-ttu-id="1c656-138">Указывает только те элементы, с которыми работает командлет, исключая все остальные.</span><span class="sxs-lookup"><span data-stu-id="1c656-138">Specifies only those items upon which the cmdlet acts, excluding all others.</span></span>
<span data-ttu-id="1c656-139">Значение этого параметра определяет параметр **Path** .</span><span class="sxs-lookup"><span data-stu-id="1c656-139">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="1c656-140">Введите путь к элементу или шаблон, например. «\*.txt».</span><span class="sxs-lookup"><span data-stu-id="1c656-140">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="1c656-141">Можно использовать подстановочные знаки.</span><span class="sxs-lookup"><span data-stu-id="1c656-141">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="1c656-142">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="1c656-142">-LiteralPath</span></span>

<span data-ttu-id="1c656-143">Задает путь к свойству элемента.</span><span class="sxs-lookup"><span data-stu-id="1c656-143">Specifies a path of the item property.</span></span>
<span data-ttu-id="1c656-144">В отличие от параметра **Path** , значение **LiteralPath** используется именно так, как оно введено.</span><span class="sxs-lookup"><span data-stu-id="1c656-144">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="1c656-145">Никакие символы не интерпретируются как знаки подстановки.</span><span class="sxs-lookup"><span data-stu-id="1c656-145">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="1c656-146">Если путь содержит escape-символы, заключите его в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="1c656-146">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="1c656-147">Одинарные кавычки указывают PowerShell не интерпретировать какие-либо символы как escape-последовательности.</span><span class="sxs-lookup"><span data-stu-id="1c656-147">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-148">-Name</span><span class="sxs-lookup"><span data-stu-id="1c656-148">-Name</span></span>

<span data-ttu-id="1c656-149">Задает текущее имя свойства для переименования.</span><span class="sxs-lookup"><span data-stu-id="1c656-149">Specifies the current name of the property to rename.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-150">-NewName</span><span class="sxs-lookup"><span data-stu-id="1c656-150">-NewName</span></span>

<span data-ttu-id="1c656-151">Задает новое имя свойства.</span><span class="sxs-lookup"><span data-stu-id="1c656-151">Specifies the new name for the property.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-152">-PassThru</span><span class="sxs-lookup"><span data-stu-id="1c656-152">-PassThru</span></span>

<span data-ttu-id="1c656-153">Возвращает объект, представляющий свойство элемента.</span><span class="sxs-lookup"><span data-stu-id="1c656-153">Returns an object that represents the item property.</span></span>
<span data-ttu-id="1c656-154">По умолчанию этот командлет не создает выходные данные.</span><span class="sxs-lookup"><span data-stu-id="1c656-154">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-155">-Path</span><span class="sxs-lookup"><span data-stu-id="1c656-155">-Path</span></span>

<span data-ttu-id="1c656-156">Указывает путь к элементу для переименования.</span><span class="sxs-lookup"><span data-stu-id="1c656-156">Specifies the path of the item to rename.</span></span>

```yaml
Type: System.String
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: True
```

### <span data-ttu-id="1c656-157">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="1c656-157">-UseTransaction</span></span>

<span data-ttu-id="1c656-158">Включает команду в активную транзакцию.</span><span class="sxs-lookup"><span data-stu-id="1c656-158">Includes the command in the active transaction.</span></span>
<span data-ttu-id="1c656-159">Этот параметр доступен только при выполнении транзакции.</span><span class="sxs-lookup"><span data-stu-id="1c656-159">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="1c656-160">Дополнительные сведения см. в разделе [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span><span class="sxs-lookup"><span data-stu-id="1c656-160">For more information, see [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-161">-Confirm</span><span class="sxs-lookup"><span data-stu-id="1c656-161">-Confirm</span></span>

<span data-ttu-id="1c656-162">Запрос подтверждения перед выполнением командлета.</span><span class="sxs-lookup"><span data-stu-id="1c656-162">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-163">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="1c656-163">-WhatIf</span></span>

<span data-ttu-id="1c656-164">Показывает, что произойдет при запуске командлета.</span><span class="sxs-lookup"><span data-stu-id="1c656-164">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="1c656-165">Командлет не выполняется.</span><span class="sxs-lookup"><span data-stu-id="1c656-165">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="1c656-166">Общие параметры</span><span class="sxs-lookup"><span data-stu-id="1c656-166">CommonParameters</span></span>

<span data-ttu-id="1c656-167">Этот командлет поддерживает общие параметры: `-Debug` , `-ErrorAction` , `-ErrorVariable` , `-InformationAction` , `-InformationVariable` , `-OutVariable` , `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` и `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="1c656-167">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="1c656-168">См. сведения в разделе [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="1c656-168">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="1c656-169">Входные данные</span><span class="sxs-lookup"><span data-stu-id="1c656-169">INPUTS</span></span>

### <span data-ttu-id="1c656-170">System.String</span><span class="sxs-lookup"><span data-stu-id="1c656-170">System.String</span></span>

<span data-ttu-id="1c656-171">В этот командлет можно передать по конвейеру строку, содержащую путь, но не литеральный путь.</span><span class="sxs-lookup"><span data-stu-id="1c656-171">You can pipe a string that contains a path, but not a literal path, to this cmdlet.</span></span>

## <span data-ttu-id="1c656-172">Выходные данные</span><span class="sxs-lookup"><span data-stu-id="1c656-172">OUTPUTS</span></span>

### <span data-ttu-id="1c656-173">Нет, System. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="1c656-173">None, System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="1c656-174">Этот командлет создает объект **PSCustomObject** , представляющий переименованное свойство Item, если указан параметр *PassThru* .</span><span class="sxs-lookup"><span data-stu-id="1c656-174">This cmdlet generates a **PSCustomObject** that represents the renamed item property, if you specify the *PassThru* parameter.</span></span>
<span data-ttu-id="1c656-175">В противном случае командлет не формирует никаких выходных данных.</span><span class="sxs-lookup"><span data-stu-id="1c656-175">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="1c656-176">ПРИМЕЧАНИЯ</span><span class="sxs-lookup"><span data-stu-id="1c656-176">NOTES</span></span>

<span data-ttu-id="1c656-177">`Remove-ItemProperty` предназначен для работы с данными, предоставляемыми любым поставщиком.</span><span class="sxs-lookup"><span data-stu-id="1c656-177">`Remove-ItemProperty` is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="1c656-178">Чтобы вывести список поставщиков, доступных в данном сеансе, введите командлет `Get-PSProvider`.</span><span class="sxs-lookup"><span data-stu-id="1c656-178">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="1c656-179">Дополнительные сведения см. в разделе [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="1c656-179">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

## <span data-ttu-id="1c656-180">Связанные ссылки</span><span class="sxs-lookup"><span data-stu-id="1c656-180">RELATED LINKS</span></span>

[<span data-ttu-id="1c656-181">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-181">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="1c656-182">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-182">Copy-ItemProperty</span></span>](Copy-ItemProperty.md)

[<span data-ttu-id="1c656-183">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-183">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="1c656-184">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-184">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="1c656-185">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-185">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="1c656-186">Remove-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-186">Remove-ItemProperty</span></span>](Remove-ItemProperty.md)

[<span data-ttu-id="1c656-187">Rename-Item</span><span class="sxs-lookup"><span data-stu-id="1c656-187">Rename-Item</span></span>](Rename-Item.md)

[<span data-ttu-id="1c656-188">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="1c656-188">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="1c656-189">about_Providers</span><span class="sxs-lookup"><span data-stu-id="1c656-189">about_Providers</span></span>](../Microsoft.PowerShell.Core/About/about_Providers.md)
